# pyo3-demo

./: .dockerignore  .gitignore  LICENSE  README.md  my-python-app.Dockerfile
my-python-app/: basic_demo.py  basic_error_demo.py  fastapi_error_demo.py  fastapi_working_demo.py  main.py  multiprocessing_demo.py  pyproject.toml  stream_demo.py
my-rust-crate/: Cargo.toml  my_rust_crate.pyi  pyproject.toml
my-rust-crate/src/: impl1_naive_stream.rs  impl2_callback_driven_stream.rs  lib.rs  make_lorem_ipsum.rs  my_ctrlc_handler.rs  my_ping_server.rs  my_rust_object.rs  my_rust_stream.rs  my_rust_stream2.rs  my_rust_stream3.rs  my_rust_stream4.rs  stream_impls.rs
my-rust-crate/src/april_18_srug/: mod.rs
