[project]
name = "my-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "maturin>=1.8.3",
    "celery[redis]>=5.3.0",
    "baml-py>=0.206.1",
    "typing-extensions>=4.15.0",
    "pydantic>=2.11.7",
    "load-dotenv>=0.1.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "billiard>=4.2.1",
]
