[package]
name = "my-rust-crate"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_rust_crate"
crate-type = ["cdylib"]

[dependencies]
axum = "0.8.3"
bytes = "1.0"
chrono = "0.4.41"
ctrlc = "3.4.6"
eventsource-stream = "0.2"
futures = "0.3.31"
pyo3 = { version = "0.25", default-features = false, features = [
    "extension-module",
    "abi3-py38",
    "macros",
] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio", "tokio-runtime"] }
pythonize = "0.25"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"

[build-dependencies]
pyo3-build-config = "0.25"
